--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Site/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Site/Index.cshtml
@@ -89,8 +89,9 @@
             <tr>
                 <th>SL</th>
                 <th>Site Name</th>
-                <th>Location</th>
-                <th>Created Date</th>
+                <th>Started Date</th>
+                <th>Status</th>
+                <th>Address</th>
                 <th>Action</th>
             </tr>
         </thead>
@@ -103,12 +104,15 @@
                     <tr>
                         <td>@count</td>
                         <td class="fw-bold">@site.Name</td>
-                        <td>@site.Location</td>
-                        <td>@site.CreatedDate.ToString("dd-MMM-yyyy")</td>
+                        <td>@site.StartedDate.ToString("dd-MMM-yyyy")</td>
+                        <td>@site.Status</td>
+                        <td>
+                            @($"{site.AddressTypes} - {site.AddressLine1} - {site.CountryName} - {site.PinCode}")
+                        </td>
                         <td class="action-links">
                             <a asp-controller="Site" asp-action="Edit" asp-route-id="@site.Id" class="edit">Edit</a> |
                             <form asp-action="Delete" asp-controller="Site" method="post" onsubmit="return confirm('Are you sure you want to delete this site?');" style="display:inline;">
-                                <input type="hidden" name="id" value="@site.Id" />
+                                <input type="hidden" name="siteId" value="@site.Id" />
                                 <button type="submit" class="btn btn-link text-danger p-0 m-0" style="text-decoration: underline;">Delete</button>
                             </form>
                         </td>
