--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/Index.cshtml
@@ -95,7 +95,7 @@
             <table>
                 <tr class="header-row">
                     <td><b>Date</b></td>
-                    <td><b>Job Type</b></td>
+                    <td><b>Service Type</b></td>
                     <td><b>Service Providers</b></td>
                     <td><b>Total Worker</b></td>
                     <td><b>Amount Per Worker</b></td>
