--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/ServiceProvider/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/ServiceProvider/Index.cshtml
@@ -90,7 +90,7 @@
 <table>
     <thead>
         <tr class="header-row">
-            <th>Job Types</th>
+            <th>Service Types</th>
             <th>Name</th>
             <th>Gender</th>
             <th>Mobile Number</th>
@@ -105,7 +105,7 @@
             foreach (var serviceProviderVm in Model)
             {
                 <tr>
-                    <td>@serviceProviderVm.JobTypes</td>
+                    <td>@serviceProviderVm.ServiceTypes</td>
                     <td>@serviceProviderVm.ServiceProviderName</td>
                     <td>@serviceProviderVm.Gender</td>
                     <td>@serviceProviderVm.MobileNumber</td>
