--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/ServiceProvider/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/ServiceProvider/Add.cshtml
@@ -46,9 +46,9 @@
             </div>
             <br />
             <div class="form-group" style="width: 60%;">
-                <label asp-for="JobCategoryId" class="control-label"><b>Job Category</b></label>
-                @Html.DropDownListFor(model => model.JobCategoryId, (SelectList)ViewBag.JobCategory, "-- SELECT --", new { @class = "form-control"})
-                @* <span asp-validation-for="JobCategoryId" class="text-danger"></span> *@
+                <label asp-for="ServiceTypeId" class="control-label"><b>Service Type</b></label>
+                @Html.DropDownListFor(model => model.ServiceTypeId, (SelectList)ViewBag.ServiceType, "-- SELECT SERVICE TYPE --", new { @class = "form-control" })
+                @* <span asp-validation-for="ServiceTypeId" class="text-danger"></span> *@
             </div>
             <br />
             <button type="button" id="btnToggleAddressButton" class="btn btn-secondary" onclick="toggleAddressFields()">Tap for Address</button>
