--- a/DotNetCore/MVC/CostConstruct/ConstructEase.WebApp/Views/Site/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructEase.WebApp/Views/Site/Add.cshtml
@@ -38,6 +38,11 @@
                 <span class="text-danger"></span>
             </div>
 
+            <div class="form-group mb-6">
+                <label class="control-label"><b>Service Providers</b></label>
+                @Html.ListBoxFor(model => model.SelectedElectricianIds, ViewBag.Electricians as MultiSelectList, new { @class = "form-control" })
+            </div>
+
 
             <br />
             <button type="button" id="btnToggleAddressButton" class="btn btn-secondary" onclick="toggleAddressFields()">Tap for Address</button>
