--- a/DotNetCore/MVC/CostConstruct/ConstructEase.WebApp/Views/Site/Add.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructEase.WebApp/Views/Site/Add.cshtml
@@ -29,38 +29,84 @@
                 <span asp-validation-for="Note" class="text-danger"></span>
             </div>
 
-
-
-   
             <div class="form-group mb-6">
-                <label class="control-label"><b>Service Providers: Master Masons</b></label>
-                @Html.ListBoxFor(model => model.SelectedMasterMasonIds, (MultiSelectList)ViewBag.Name, new { @class = "form-control" })
-                <span class="text-danger"></span>
-            </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <label class="form-label fw-bold">Master Masons</label>
+                        @foreach (var item in (MultiSelectList)ViewBag.Name)
+                        {
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" name="SelectedMasterMasonIds" value="@item.Value"
+                                       @(Model.SelectedMasterMasonIds?.Contains(int.Parse(item.Value)) == true ? "checked" : "") />
+                                <label class="form-check-label">@item.Text</label>
+                            </div>
+                        }
+                    </div>
 
-            <div class="form-group mb-6">
-                <label class="control-label"><b>Service Providers: Electricians</b></label>
-                @Html.ListBoxFor(model => model.SelectedElectricianIds, ViewBag.Electricians as MultiSelectList, new { @class = "form-control" })
-            </div>
+                    <div class="col-md-6">
+                        <label class="form-label fw-bold">Labours</label>
+                        @foreach (var item in (MultiSelectList)ViewBag.Labours)
+                        {
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" name="SelectedLabourIds" value="@item.Value"
+                                       @(Model.SelectedLabourIds?.Contains(int.Parse(item.Value)) == true ? "checked" : "") />
+                                <label class="form-check-label">@item.Text</label>
+                            </div>
+                        }
+                    </div>
+                </div>
 
-            <div class="form-group mb-6">
-                <label class="control-label"><b>Service Providers: Labours</b></label>
-                @Html.ListBoxFor(model => model.SelectedLabourIds, ViewBag.Labours as MultiSelectList, new { @class = "form-control" })
-            </div>
+                <div class="row mt-4">
+                    <div class="col-md-6">
+                        <label class="form-label fw-bold">Electricians</label>
+                        @foreach (var item in (MultiSelectList)ViewBag.Electricians)
+                        {
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" name="SelectedElectricianIds" value="@item.Value"
+                                       @(Model.SelectedElectricianIds?.Contains(int.Parse(item.Value)) == true ? "checked" : "") />
+                                <label class="form-check-label">@item.Text</label>
+                            </div>
+                        }
+                    </div>
 
-            <div class="form-group mb-6">
-                <label class="control-label"><b>Service Providers: Plumbers</b></label>
-                @Html.ListBoxFor(model => model.SelectedPlumberIds, ViewBag.Plumbers as MultiSelectList, new { @class = "form-control" })
-            </div>
+                    <div class="col-md-6">
+                        <label class="form-label fw-bold">Plumbers</label>
+                        @foreach (var item in (MultiSelectList)ViewBag.Plumbers)
+                        {
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" name="SelectedPlumberIds" value="@item.Value"
+                                       @(Model.SelectedPlumberIds?.Contains(int.Parse(item.Value)) == true ? "checked" : "") />
+                                <label class="form-check-label">@item.Text</label>
+                            </div>
+                        }
+                    </div>
+                </div>
 
-            <div class="form-group mb-6">
-                <label class="control-label"><b>Service Providers: Carpenters</b></label>
-                @Html.ListBoxFor(model => model.SelectedCarpenterIds, ViewBag.Carpenters as MultiSelectList, new { @class = "form-control" })
-            </div>
+                <div class="row mt-4">
+                    <div class="col-md-6">
+                        <label class="form-label fw-bold">Carpenters</label>
+                        @foreach (var item in (MultiSelectList)ViewBag.Carpenters)
+                        {
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" name="SelectedCarpenterIds" value="@item.Value"
+                                       @(Model.SelectedCarpenterIds?.Contains(int.Parse(item.Value)) == true ? "checked" : "") />
+                                <label class="form-check-label">@item.Text</label>
+                            </div>
+                        }
+                    </div>
 
-            <div class="form-group mb-6">
-                <label class="control-label"><b>Service Providers: Tilers </b></label>
-                @Html.ListBoxFor(model => model.SelectedTilerIds, ViewBag.Tilers as MultiSelectList, new { @class = "form-control" })
+                    <div class="col-md-6">
+                        <label class="form-label fw-bold">Tilers</label>
+                        @foreach (var item in (MultiSelectList)ViewBag.Tilers)
+                        {
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" name="SelectedTilerIds" value="@item.Value"
+                                       @(Model.SelectedTilerIds?.Contains(int.Parse(item.Value)) == true ? "checked" : "") />
+                                <label class="form-check-label">@item.Text</label>
+                            </div>
+                        }
+                    </div>
+                </div>
             </div>
 
 
